[workspace]
resolver = "2"
members = [
	"controlplane",
	"dataplane/api-server",
	"dataplane/common",
	"dataplane/loader",
	"tools/udp-test-server",
	"xtask",
]
exclude = ["dataplane/ebpf"]

[workspace.package]
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/kubernetes-sigs/blixt"
version = "0.3.0"

[workspace.dependencies]
anyhow = { version = "1", default-features = true }
chrono = { version = "0.4.33", default-features = false }
clap = { version = "4.5", default-features = true }
env_logger = { version = "0.11", default-features = false }
gateway-api = { version = "0.9.0", default-features = false }
futures = { version="0.3.28", default-features = true }
kube = { version = "^0.88.0", default-features = false }
k8s-openapi = { version = "0.21.1", default-features = false }
libc = { version = "0.2", default-features = false }
log = { version = "0.4", default-features = false }
memoffset = { version = "0.9", default-features = false }
network-types = { version = "0.0.5", default-features = false }
prost = { version = "0.12.6", default-features = false }
regex = { version = "1", default-features = true }
serde = { version = "1.0.185", default-features = false }
serde_json = { version = "1.0.138", default-features = false }
serde_yaml = { version = "0.9.25", default-features = false }
thiserror = { version = "1.0.47", default-features = true }
tokio = { version = "1.43.0", default-features = false }
tonic = { version = "0.11.0", default-features = false }
tonic-build = { version = "0.11.0", default-features = false }
tonic-health = { version = "0.11.0", default-features = false }
tracing = { version = "0.1.41", default-features = false }
tracing-subscriber = { version = "0.3", default-features = false }
