[workspace]
resolver = "2"
members = [
	"controlplane",
	"dataplane/api-server",
	"dataplane/common",
	"dataplane/loader",
	"tests-integration",
	"tools/udp-test-server",
	"xtask",
]
exclude = ["dataplane/ebpf"]

[workspace.package]
edition = "2024"
license = "Apache-2.0"
repository = "https://github.com/kubernetes-sigs/blixt"
version = "0.3.0"

[workspace.dependencies]
anyhow = { version = "1", default-features = true }
# WARN: aya versions need to match with versions in dataplane/ebpf/Cargo.toml which is not a workspace member
aya = { version = "0.13.1" }
aya-log = { version = "0.2.1" }
chrono = { version = "0.4.41", default-features = false }
clap = { version = "4.5", default-features = true }
gateway-api = { version = "0.16.0", default-features = false }
futures = { version="0.3.31", default-features = true }
kube = { version = "1.1.0", default-features = false }
k8s-openapi = { version = "0.25.0", default-features = false }
libc = { version = "0.2", default-features = false }
memoffset = { version = "0.9", default-features = false }
network-types = { version = "0.0.8", default-features = false }
prost = { version = "0.13.5", default-features = false }
regex = { version = "1", default-features = true }
serde = { version = "1.0.219", default-features = false }
serde_json = { version = "1.0.142", default-features = false }
serde_yaml = { version = "0.9.34", default-features = false }
thiserror = { version = "2.0.16", default-features = true }
tokio = { version = "1.47.1", default-features = false }
tonic = { version = "0.13.1", default-features = false }
tonic-build = { version = "0.13.1", default-features = false, features = ["prost"] }
tonic-health = { version = "0.13.1", default-features = false }
tracing = { version = "0.1.41", default-features = false }
tracing-log = { version = "0.2.0" }
tracing-subscriber = { version = "0.3", default-features = false, features = ["env-filter", "fmt"] }
