[package]
name = "controlplane"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
doc = false
name = "controller"
path = "src/main.rs"

[dependencies]
futures = "0.3.28"
tokio = { version = "1.32.0", features = ["macros", "rt-multi-thread"] }
kube = { version = "^0.88.0", default-features = false, features = ["runtime", "client", "derive", "rustls-tls"] }
k8s-openapi = { version = "0.21.1", features = ["latest"] }
serde = { version = "1.0.185", features = ["derive"] }
chrono = { version = "0.4.33", features = ["serde"] }
serde_json = "1.0.105"
serde_yaml = "0.9.25"
tracing = "0.1.37"
tracing-subscriber = "0.3"
thiserror = "1.0.47"
anyhow = "1.0.75"
gateway-api = "0.9.0"

