[package]
name = "controlplane"
edition = { workspace = true }
license = { workspace = true }
repository = { workspace = true }
version = { workspace = true }

[[bin]]
name = "controller"
path = "src/bin/controller.rs"

[dependencies]
futures = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
kube = { workspace = true, features = ["runtime", "client", "derive", "rustls-tls"] }
k8s-openapi = { workspace = true, features = ["v1_32", "schemars"] }
chrono = { workspace = true, features = ["serde"] }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["fmt"] }
thiserror = { workspace = true }
gateway-api = { workspace = true }
tonic = { workspace = true, features = ["tls-ring"] }
tonic-health = { workspace = true }
api-server = { path = "../dataplane/api-server" }
clap = { workspace = true, features = ["derive"] }
