[package]
name = "xtask"
edition.workspace = true
license.workspace = true
repository.workspace = true
version.workspace = true

[dependencies]
anyhow = { workspace = true }
backends = { workspace = true }
clap = { workspace = true, features = ["derive"] }
prost = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
tonic = { workspace = true }
tonic-build = { workspace = true, features = ["prost"] }
controlplane = { path = "../controlplane" }

[target.'cfg(target_os = "linux")'.dependencies]
api-server = { path = "../dataplane/api-server" }
