[package]
name = "xtask"
edition.workspace = true
license.workspace = true
repository.workspace = true
version.workspace = true

[dependencies]
anyhow = { workspace = true }
clap = { workspace = true, features = ["derive"] }
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
tonic-build = { workspace = true, features = ["prost"] }
tracing-subscriber = { workspace = true }
tracing = { workspace = true }
tests = { path = "../tests" }

[target.'cfg(target_os = "linux")'.dependencies]
api-server = { path = "../dataplane/api-server" }