[package]
name = "api-server"
edition.workspace = true
license.workspace = true
repository.workspace = true
version.workspace = true

[dependencies]
anyhow = { workspace = true }
aya = { workspace = true, features = ["async_tokio"] }
clap = { workspace = true, features = ["derive"] }
common = { workspace = true, features = ["user"] }
libc = { workspace = true }
log = { workspace = true }
netlink-packet-core = { workspace = true }
netlink-packet-route = { workspace = true }
netlink-sys = { workspace = true }
prost = { workspace = true }
tokio = { workspace = true, features = [
    "macros",
    "rt",
    "rt-multi-thread",
    "net",
    "signal",
] }
tonic = { workspace = true, features = ["tls"] }
tonic-health = { workspace = true }

[build-dependencies]
tonic-build = { workspace = true }

[dev-dependencies]
tempfile = "3.14.0"
rcgen = "0.9.3"
