[package]
name = "api-server"
edition.workspace = true
license.workspace = true
repository.workspace = true
version.workspace = true

[dependencies]
anyhow = { workspace = true }
aya = { version = "0.13.1", features = ["async_tokio"] }
clap = { workspace = true, features = ["derive"] }
common = { path = "../common", features = ["user"] }
libc = { workspace = true }
log = { workspace = true }
netlink-packet-core = { version = "0.7.0" }
netlink-packet-route = { version = "0.23.0" }
netlink-sys = { version = "0.8.7" }
prost = { workspace = true }
tokio = { workspace = true, features = [
    "macros",
    "rt",
    "rt-multi-thread",
    "net",
    "signal",
] }
tonic = { workspace = true, features = ["tls"] }
tonic-health = { workspace = true }

[build-dependencies]
tonic-build = { workspace = true }

[dev-dependencies]
tempfile = "3.20.0"
rcgen = "0.13.2"
