[package]
name = "ebpf"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
aya-ebpf = { git = "https://github.com/aya-rs/aya" }
aya-log-ebpf = { git = "https://github.com/aya-rs/aya" }
aya-ebpf-cty = { git = "https://github.com/aya-rs/aya" }
common = { path = "../common" }
memoffset = "0.9"
network-types = "0.0.5"

[[bin]]
name = "loader"
path = "src/main.rs"

[profile.dev]
opt-level = 3
debug = true
debug-assertions = false
overflow-checks = false
lto = true
panic = "abort"
incremental = false
codegen-units = 1
rpath = false

[profile.release]
lto = true
panic = "abort"
codegen-units = 1
debug-assertions = false

[workspace]
members = []
