[package]
name = "ebpf"
version = "0.1.0"
# FIXME: upgrade to 2024 as the rest of the project is already on 2024
# are there technical reasons to stay on 2021 for ebpf
edition = "2021"
publish = false

[dependencies]
aya-ebpf = { version = "0.1.1" }
aya-log-ebpf = { version = "0.1.1" }
aya-ebpf-cty = { version = "0.2.2" }
common = { path = "../common" }
memoffset = "0.9"
network-types = "0.0.5"

[[bin]]
name = "loader"
path = "src/main.rs"

[profile.dev]
opt-level = 3
debug = true
debug-assertions = false
overflow-checks = false
lto = true
panic = "abort"
incremental = false
codegen-units = 1
rpath = false

[profile.release]
lto = true
panic = "abort"
codegen-units = 1
debug-assertions = false
