[package]
name = "loader"
edition.workspace = true
license.workspace = true
repository.workspace = true
version.workspace = true

[[bin]]
name = "loader"
path = "src/main.rs"

[dependencies]
aya = { workspace = true, features = ["async_tokio"] }
aya-log = { workspace = true }
anyhow = { workspace = true }
api-server = { path = "../api-server" }
common = { path = "../common", features = ["user"] }
clap = { workspace = true, features = ["derive"] }
env_logger = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt", "rt-multi-thread", "net", "signal"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tracing-log = { workspace = true }