[package]
name = "xtask"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
aya-tool = { git = "https://github.com/aya-rs/aya", branch = "main" }
clap = { version = "4.4", features = ["derive"] }
prost = "0.11.9"
tokio = { version = "1.32.0", features = ["macros", "rt-multi-thread"] }
tonic = "0.9.2"
api-server = { path = "../api-server" }

[build-dependencies]
tonic-build = "0.9.2"
