[package]
name = "xtask"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
clap = { version = "4.4", features = ["derive"] }
prost = "0.12.3"
tokio = { version = "1.32.0", features = ["macros", "rt-multi-thread"] }
tonic = "0.11.0"
api-server = { path = "../api-server" }
tonic-build = "0.11.0"
